# RipplX

./: .clinerules  .dockerignore  .env.example  .gitignore  AGENTS.md  AI_CONVERSATION.md  CLAUDE.md  CORE_CODE.md  DEFERRED_ISSUES.md  Dockerfile  FRONTEND_PLAN.md  IDEAS.md  KERNEL.md  README.md  RIPPLX_DEBUG_HANDOFF.md  SECURITY_AUDIT.md  SECURITY_FRAMEWORK.md  SYSTEM_DESIGN.md  chatgpt56.md  conftest.py  pyproject.toml  test_full.txt  test_output.txt  vercel.json
.github/workflows/: ci.yml
docs/: CLAUDE_v0.2_full_spec.md  CONCIERGE_ALPHA.md  figma_handoff.md  sample_digest.md
scripts/: reanalyze.sh  smoke.sh  start_demo.cmd  start_demo.ps1
src/finwatch/: __init__.py  cli.py  config.py
src/finwatch/claims/: __init__.py  persist.py
src/finwatch/core/: text_policy.py  types.py
src/finwatch/db/: __init__.py  database.py  migration_002_filing_stage_runs.sql  migration_003_unique_holding_cik.sql  repositories.py  schema.sql
src/finwatch/demo/: __init__.py  demo.py
src/finwatch/digest/: __init__.py  render.py
tests/: conftest.py  test_cli_ingest.py  test_cli_smoke.py  test_concept_map.py  test_config.py  test_db.py  test_digest.py  test_drop_code_labels.py  test_edgar.py  test_evals.py  test_evals_live.py  test_harness.py  test_ingest.py  test_ingest_live.py  test_launch_projection.py  test_llm.py  test_metrics_cli.py  test_metrics_fivecompany.py  test_metrics_service.py  test_pipeline.py  test_preprocess.py  test_preprocess_live.py  test_presentation.py  test_presentation_fail_closed.py  test_presentation_verifier.py  test_review_fixes.py  test_run.py  test_signals_engine.py  test_signals_matrix.py  test_starter_metric_integrity.py  test_stooq.py  test_text_policy.py  test_tickers.py  test_verifier_mutations.py  test_verify_orchestrator.py  test_web.py  test_web_auth.py  test_web_security.py
tests/fixtures/: company_tickers.json  companyfacts_CIK0000320193.json  eightk_sample.html  stooq_aapl.csv  submissions_CIK0000320193.json  tenk_sample.html
tmp_test/test_cli_digest_writes_file_an0/: digest.md
web/: index.html  package-lock.json  package.json  vite.config.ts
web/scripts/: check-class-names.mjs
web/src/: App.test.tsx  App.tsx  types.ts
(+136 files in other folders)
